WithoutARGOandHELM/svc_canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-canary-service
spec:
  selector:
    app: myapp
    version: canary
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
