WithoutARGOandHELM/svc_stable.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-stable-service
spec:
  selector:
    app: myapp
    version: stable
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP

#We don't need to explictly mention type in service by default it takes ClusterIP
